Jump animation bug fixed

--- a/assignments/JS/Game/assets/css/Style.css
+++ b/assignments/JS/Game/assets/css/Style.css
@@ -94,15 +94,16 @@ body{
     position: absolute;
     left: 5%;
     height: 190px;
-    bottom: 8%;
+    /*bottom: 8%;*/
+    margin-top: 490px;
 }
 
 .box{
     background-image: url("../img/fire.gif");
     background-size: contain;
     background-repeat: no-repeat;
-    width: 100px;
-    height: 100px;
+    width: 75px;
+    height: 75px;
     position: absolute;
     bottom: 6%;
     right: 8%;
